--- a/index.html
+++ b/index.html
@@ -453,6 +453,16 @@
                             <p>Будучи одним из главных исследователей современных достижений в области искусственного интеллекта, Курцвейл публикует свои прогнозы с 1990-х годов, многие из которых стали академическими, пишет Inventure.</p> 
                             <p>Но если еще пять лет назад он чаще оперировал длительными периодами (2030-е годы, 2040-е годы), то в последнее время в предположениях ученого появилась хронологическая стройность. Возможно, на точность повлияла его работа <a href="#">в самой большой интернет-компании</a>, где футуролог оказался на передовой многих инновационных разработок.</p>
                         </div>
+                        <div class="w-text">
+                            <p><b>Технический директор Google</b> и известный технологический футуролог Рэй Курцвейл выступил в начале этого года с очередной порцией предсказаний.</p> 
+                            <p>Будучи одним из главных исследователей современных достижений в области искусственного интеллекта, Курцвейл публикует свои прогнозы с 1990-х годов, многие из которых стали академическими, пишет Inventure.</p> 
+                            <p>Но если еще пять лет назад он чаще оперировал длительными периодами (2030-е годы, 2040-е годы), то в последнее время в предположениях ученого появилась хронологическая стройность. Возможно, на точность повлияла его работа <a href="#">в самой большой интернет-компании</a>, где футуролог оказался на передовой многих инновационных разработок.</p>
+                        </div>
+                        <div class="w-text">
+                            <p><b>Технический директор Google</b> и известный технологический футуролог Рэй Курцвейл выступил в начале этого года с очередной порцией предсказаний.</p> 
+                            <p>Будучи одним из главных исследователей современных достижений в области искусственного интеллекта, Курцвейл публикует свои прогнозы с 1990-х годов, многие из которых стали академическими, пишет Inventure.</p> 
+                            <p>Но если еще пять лет назад он чаще оперировал длительными периодами (2030-е годы, 2040-е годы), то в последнее время в предположениях ученого появилась хронологическая стройность. Возможно, на точность повлияла его работа <a href="#">в самой большой интернет-компании</a>, где футуролог оказался на передовой многих инновационных разработок.</p>
+                        </div>
                         <div class="w-price">
                             <p>7775$</p>
                             <p>25 days</p>
